--- a/abstract.tex
+++ b/abstract.tex
@@ -3,16 +3,13 @@
 \thispagestyle{empty}
 \null\vfill
 
-\settowidth\longest{\huge\itshape just as his inclination leads him;}
+\settowidth\longest{\huge\itshape Nulla dies sine linea}
 \begin{center}
 	\parbox{\longest}{%
 	  \raggedright{\huge\itshape%
-	   A man ought to read \\ 
-	  just as his inclination leads him; \\
-	  for what he reads as a task \\ 
-	  will do him little good.\par\bigskip
+	   Nulla dies\\ sine linea.\par\bigskip
 	  }   
-	  \raggedleft\Large\MakeUppercase{Samuel Johnson}\par%
+	  \raggedleft\Large\MakeUppercase{Apelles}\par%
 	}
 \end{center}
 \vfill\vfill
