add event-driven example

--- a/technology_stack.tex
+++ b/technology_stack.tex
@@ -261,10 +261,7 @@
 
 \subsubsection{Event-driven model}		 
 
-		O οδηγούμενος από τα γεγονότα (event-driven) προγραμματισμός είναι ένα προγραμματιστικό μοντέλο όπου η ροή της εκτέλεσης “οδηγείται” από τα γεγονότα. Τα γεγονότα αυτά τα χειρίζονται είτε οι επιστρεφόμενες κλήσεις των γεγονότων είτε οι χειριστές συμβάντος. Μια επιστρεφόμενη κλήση είναι μια συνάρτηση η οποία καλείται όταν συμβαίνει ένα συγκεκριμένο γεγονός. Στα πλαίσια του εξυπηρετητή το γεγονός στο οποίο αναφερόμαστε συνήθως αποτελεί η ολοκλήρωση μιας λειτουργίας Ε/Ε. 
-		
-
-		/*na grapsw paradeigma.....
+		O οδηγούμενος από τα γεγονότα (event-driven) προγραμματισμός είναι ένα προγραμματιστικό μοντέλο όπου η ροή της εκτέλεσης “οδηγείται” από τα γεγονότα. Τα γεγονότα αυτά τα χειρίζονται είτε οι επιστρεφόμενες κλήσεις των γεγονότων είτε οι χειριστές συμβάντος. Μια επιστρεφόμενη κλήση είναι μια συνάρτηση η οποία καλείται όταν συμβαίνει ένα συγκεκριμένο γεγονός. Στα πλαίσια του εξυπηρετητή το γεγονός στο οποίο αναφερόμαστε συνήθως αποτελεί η ολοκλήρωση μιας λειτουργίας Ε/Ε. Για παράδειγμα σε μια γραφική διεπαφή χρήστη έχουμε ως γεγονότα τα πατήματα πλήκτρων ή επιλογών με το ποντίκι.
 		
 		Στις περιπτώσεις αυτές που οι λειτουργίες Ε/Ε επιστρέφουν μία συνάρτηση και όχι απλά μία τιμή έχουμε το μοντέλο του ασύγχρονου ή οδηγούμενου από γεγονότα προγραμματισμού. Έτσι επιτυγχάνεται η παραλληλοποίηση των Ε/Ε λειτουργιών,ενώ κάθε φορά η συνάρτηση επιστρεφόμενης κλήσης ενημερώνει για την ολοκλήρωση της αντίστοιχης λειτουργίας. Η JavaScript ανήκει σε αυτό το είδος προγραμματισμού. Η JavaScript υποστηρίζει επιπλέον το μοτίβο κλεισίματος (closure pattern) καθώς και το πέρασμα συναρτήσεων σαν παραμέτρους σε άλλη συνάρτηση (first-class functions).
 		
