Fix thesis presentation date

--- a/thesis.tex
+++ b/thesis.tex
@@ -90,8 +90,8 @@
 
 \title{Ολοκληρωμένο σύστημα διαχείρισης εθελοντικής αιμοδοσίας στο υπολογιστικό νέφος}
 \author{Ρεβέκκα Παλαιολόγου\\Φωτόπουλος Ηλίας}
-\date{Σεπτέμβριος 2015}
-\datedefense{08}{10}{2015}
+\date{Οκτώβριος 2015}
+\datedefense{20}{10}{2015}
 
 \supervisor{Διονύσιος-Δημήτριος Κουτσούρης}
 \supervisorpos{Καθηγητής Ε.Μ.Π.}
