Fix references URLs

--- a/references.bib
+++ b/references.bib
@@ -352,6 +352,7 @@
 @Electronic{whiteBloodCells,
   Title                    = {What Are White Blood Cells},
   Author                   = {Bowers},
+  HowPublished             = {https://www.urmc.rochester.edu/encyclopedia/},
   Organization             = {University of Rochester medical center},
   Url                      = {https://www.urmc.rochester.edu/encyclopedia/content.aspx?ContentTypeID=160&ContentID=35},
 
@@ -362,6 +363,7 @@
 @Electronic{bloodPlasma,
   Title                    = {What Is Plasma},
   Author                   = {Bowers, Nancy},
+  HowPublished             = {https://www.urmc.rochester.edu/encyclopedia/},
   Language                 = {English},
   Organization             = {University of Rochester},
   Url                      = {https://www.urmc.rochester.edu/encyclopedia/content.aspx?ContentTypeID=160&ContentID=37},
@@ -443,6 +445,7 @@
 @Electronic{bloodDonationDefinition,
   Title                    = {Blood donation},
   Author                   = {Mayo Clinic},
+  HowPublished             = {http://www.mayoclinic.org/tests-procedures/blood-donation},
   Language                 = {English},
   Organization             = {Mayo Clinic},
   Url                      = {http://www.mayoclinic.org/tests-procedures/blood-donation/basics/definition/prc-20020069},
@@ -762,6 +765,7 @@
 @Electronic{diadikasiaAimodosias,
   Title                    = {Διαδικασία Αιμοδοσίας},
   Author                   = {E.KE.A},
+  HowPublished             = {http://www.ekea.gr/what-expect/},
   Language                 = {Greek},
   Organization             = {E.KE.A},
   Url                      = {http://www.ekea.gr/what-expect/},
@@ -773,6 +777,7 @@
 @Electronic{EKEA,
   Title                    = {Blood donation statistics},
   Author                   = {E.KE.A},
+  HowPublished             = {http://www.ekea.gr/statistics},
   Organization             = {E.KE.A},
   Url                      = {http://www.ekea.gr/%CE%B4%CE%B5%CE%BB%CF%84%CE%B9%CE%BF-%CF%84%CF%85%CF%80%CE%BF%CF%85/},
 
@@ -784,6 +789,7 @@
 @Electronic{ekeaQuestionnaire,
   Title                    = {Donor Questionaire},
   Author                   = {E.KE.A},
+  HowPublished             = {http://www.ekea.gr/donor-questionaire/},
   Organization             = {E.KE.A},
   Url                      = {http://www.ekea.gr/donor-questionaire/},
 
@@ -807,6 +813,7 @@
 @Electronic{epsos,
   Title                    = {epSOS Services},
   Author                   = {epSOS},
+  HowPublished             = {http://www.epsos.eu/epsos-services.html},
   Organization             = {epSOS},
   Url                      = {http://www.epsos.eu/epsos-services.html},
 
@@ -895,6 +902,7 @@
 @Electronic{galinos,
   Title                    = {ICD-10},
   Author                   = {Galinos},
+  HowPublished             = {http://www.galinos.gr/web/drugs/main/lists/icdcodes},
   Url                      = {http://www.galinos.gr/web/drugs/main/lists/icdcodes},
 
   Owner                    = {revekka},
@@ -1178,6 +1186,7 @@ Timothy Grance},
 @Electronic{HL7RIM,
   Title                    = {HL7 Version 3: Reference Information Model (RIM)},
   Author                   = {HL7},
+  HowPublished             = {http://www.hl7.org/implement/standards/productbrief.cfm?productid77},
   Organization             = {Health Level Seven International},
   Url                      = {http://www.hl7.org/implement/standards/product_brief.cfm?product_id=77},
 
@@ -1188,6 +1197,7 @@ Timothy Grance},
 @Electronic{HL7V3ProductSuite,
   Title                    = {HL7 Version 3 Product Suite},
   Author                   = {HL7},
+  HowPublished             = {https://www.hl7.org/implement/standards/productbrief.cfm?productid186},
   Organization             = {Health Level Seven International},
   Url                      = {https://www.hl7.org/implement/standards/product_brief.cfm?product_id=186},
 
@@ -1198,6 +1208,7 @@ Timothy Grance},
 @Electronic{HL7Version27,
   Title                    = {HL7 Messaging Standard Version 2.7},
   Author                   = {HL7},
+  HowPublished             = {http://www.hl7.org/implement/standards},
   Organization             = {HL7},
   Url                      = {http://www.hl7.org/implement/standards/product_brief.cfm?product_id=146},
 
@@ -1241,6 +1252,7 @@ Timothy Grance},
 @Electronic{characteristics,
   Title                    = {Cloud Characteristics},
   Author                   = {Interoute},
+  HowPublished             = {http://www.interoute.com/cloud-article/},
   Organization             = {Interoute},
   Url                      = {http://www.interoute.com/cloud-article/},
 
@@ -2000,6 +2012,7 @@ URN: urn:nbn:de:0114-fqs0501297},
 @Electronic{thalassaemiaLongTerm,
   Title                    = {Thalassaemia},
   Author                   = {Colin Tidy},
+  HowPublished             = {http://patient.info/health/thalassaemia},
   Language                 = {English},
   Organization             = {patient.info},
   Url                      = {http://patient.info/health/thalassaemia-leaflet},
@@ -2142,6 +2155,7 @@ URN: urn:nbn:de:0114-fqs0501297},
 @Electronic{bootstrap,
   Title                    = {Bootstrap},
   Author                   = {Wikipedia},
+  HowPublished             = {https://en.wikipedia.org/wiki/Bootstrap},
   Url                      = {https://en.wikipedia.org/wiki/Bootstrap_(front-end_framework)},
 
   Owner                    = {revekka},
@@ -2151,6 +2165,7 @@ URN: urn:nbn:de:0114-fqs0501297},
 @Electronic{Framework,
   Title                    = {Software Framework},
   Author                   = {Wikipedia},
+  HowPublished             = {https://en.wikipedia.org/wiki/Softwareframework},
   Url                      = {https://en.wikipedia.org/wiki/Softwareframework},
 
   Owner                    = {revekka},
@@ -2179,6 +2194,7 @@ URN: urn:nbn:de:0114-fqs0501297},
 @Electronic{aboutBlood,
   Title                    = {Blood 101 (All about blood)},
   Author                   = {BloodCenter of Wisconsin},
+  HowPublished             = {https://www.bcw.edu/bcw/Blood-Donation},
   Language                 = {English},
   Organization             = {BloodCenter of Wisconsin},
   Url                      = {https://www.bcw.edu/bcw/Blood-Donation/all-about-blood/index.htm},
