add info about epsos rules

--- a/interoperability.tex
+++ b/interoperability.tex
@@ -429,18 +429,11 @@
 	\subsubsection{Αρχιτεκτονική και Σχεδιασμός}
 		
 		Τα στοιχεία και συστήματα που χρησιμοποιούνται στην δημιουργία του Eligibility as a Service είναι τα εξής:
-		
 		\begin{itemize}
-		
 		\item το CDS σύστημα, το οποίο βρίσκεται σε ένα ιδιωτικό νέφος (cloud).
-
 		\item Το ``ΣΥΖΕΥΞΙΣ", το οποίο είναι ένα έργο του Υπουργείου Διοικητικής Μεταρρύθμισης \& Ηλεκτρονικής Διακυβέρνησης (ΥΔΜΗΔ), με το οποίο επιδιώκεται η ανάπτυξη και ο εκσυγχρονισμός της τηλεπικοινωνιακής υποδομής του Δημόσιου Τομέα. Αποτελεί  ένα δίκτυο πρόσβασης και κορμού για τους φορείς του Δημοσίου, με σκοπό να καλύψει όλες τις ανάγκες για τη μεταξύ τους επικοινωνία με  Τηλεφωνία (τηλεφωνική επικοινωνία ανάμεσα στους φορείς). Θα χρησιμοποιηθεί για να εξασφαλίσουμε την ασφαλή πρόσβαση στα ιατρικά δεδομένα των ασθενών.
-		
 		\item Το κέντρο δεδομένων (data center), της ΗΔΙΚΑ (Ηλεκτρονική Διακυβέρνηση Κοινωνικής Ασφάλισης Α.Ε.), στο οποίο στεγάζονται τα δεδομένα του e-prescription και το patient record.
-		
-
-		\item CDA(epsos) πρωτόκολλο επικοινωνίας, για την μεταφορά των ιατρικών απαιτούμενων δεδομένων από την ΗΔΙΚΑ στο CDS σύστημα.
-			
+		\item CDA (σε συμφωνία με τις λειτουργικές και τεχνικές προδιαγραφές του έργου epsos) πρωτόκολλο επικοινωνίας, για την μεταφορά των ιατρικών απαιτούμενων δεδομένων από την ΗΔΙΚΑ στο CDS σύστημα.
 		\end{itemize}				
 		
 			\begin{figure}[h]
