minor whitespace fix

--- a/abstract.tex
+++ b/abstract.tex
@@ -18,12 +18,9 @@
 
 
 \begin{acknowledgementsgr}
-Με τη λήξη αυτού του ακαδημαϊκού κύκλου, θέλουμε να ευχαριστήσουμε όλους όσοι στάθηκαν στο πλευρό μας και μας στήριξαν κατά τη διάρκεια της εκπόνησης της διπλωματικής μας εργασίας αλλά και καθ’ όλη τη διάρκεια των σπουδών μας .
-
-Θα θέλαμε αρχικά να ευχαριστήσουμε τον επιβλέποντα καθηγητή, κ. Δημήτριο Κουτσούρη, που μας έδωσε τη δυνατότητα να ασχοληθούμε με ένα τόσο ενδιαφέρον και σημαντικό θέμα.
-
-Επίσης θα θέλαμε να ευχαριστήσουμε τον κ. Ιωάννη Κουρή για τη συνεχή και αποτελεσματική βοήθειά του, καθώς και τη συνολική υποστήριξή του καθ΄ όλη τη διάρκεια εκπόνησης της διπλωματικής μας εργασίας.
-
+Με τη λήξη αυτού του ακαδημαϊκού κύκλου, θέλουμε να ευχαριστήσουμε όλους όσοι στάθηκαν στο πλευρό μας και μας στήριξαν κατά τη διάρκεια της εκπόνησης της διπλωματικής μας εργασίας αλλά και καθ’ όλη τη διάρκεια των σπουδών μας .\\\\
+Θα θέλαμε αρχικά να ευχαριστήσουμε τον επιβλέποντα καθηγητή, κ. Δημήτριο Κουτσούρη, που μας έδωσε τη δυνατότητα να ασχοληθούμε με ένα τόσο ενδιαφέρον και σημαντικό θέμα.\\\\
+Επίσης θα θέλαμε να ευχαριστήσουμε τον κ. Ιωάννη Κουρή για τη συνεχή και αποτελεσματική βοήθειά του, καθώς και τη συνολική υποστήριξή του καθ΄ όλη τη διάρκεια εκπόνησης της διπλωματικής μας εργασίας.\\\\
 Τέλος, οφείλουμε ένα μεγάλο ευχαριστώ στις οικογένειές μας, στους γονείς μας Βασίλη-Κέλλυ και Κωνσταντίνο-Βασιλική αντίστοιχα, καθώς και τους φίλους μας, για την αμέριστη συμπαράσταση, υποστήριξή και συνολική τους βοήθεια σε όλα τα επίπεδα.
 \end{acknowledgementsgr}
 
