--- a/thesis.tex
+++ b/thesis.tex
@@ -100,8 +100,8 @@
 \committeeonepos{Καθηγητής Ε.Μ.Π.}
 \committeetwo{Παναγιώτης Τσανάκας}
 \committeetwopos{Καθηγητής Ε.Μ.Π.}
-\committeethree{Κωνσταντίνα Νικήτα}
-\committeethreepos{Καθηγήτρια Ε.Μ.Π.}
+\committeethree{Ματσόπουλος Γεώργιος}
+\committeethreepos{Αναπληρωτής Καθηγητής Ε.Μ.Π.}
 
 
 \department{Τομέας Συστημάτων Μετάδοσης Πληροφορίας και Τεχνολογίας Υλικών}
