--- a/intro.tex
+++ b/intro.tex
@@ -2,11 +2,11 @@
 \section{Στόχοι διπλωματικής}\label{sec:intro_goals}
 Η παρούσα διπλωματική έχει ως στόχο να αντιμετωπίσει τα σημαντικά προβλήματα που εμφανίζονται στον χώρο της εθελοντικής αιμοδοσίας, τόσο σε επίπεδο μηχανογράφησης όσο και σε επίπεδο ανεπάρκειας δωρεών αίματος. Συγκεκριμένα οι στόχοι που ευελπιστούμε να πετύχουμε με το προτεινόμενο σύστημα είναι οι παρακάτω:
 \begin{itemize}
-	\item \textbf{Στρατολόγηση περισσότερων νέων εθελοντών:} Το σύστημα που προτείνουμε στην παρούσα διπλωματική εργασίας και κυρίως η εφαρμογή κινητού που το συνοδεύει πρόκειται να βοηθήσει σε πολύ μεγάλο βαθμό στην εξεύρεση περισσότερων εθελοντών αιμοδοτών και ειδικότερα άτομα νεαρότερης ηλικίας τα οποία χρησιμοποιούν κατά κόρων τα προϊόντα της νέας τεχνολογίας. Η προσθήκη ατόμων της νέας γενιάς στις τάξεις των εθελοντών αιμοδοτών μπορεί να κλείσει την όλο και αυξανόμενη ψαλίδα μεταξύ προσφοράς και ζήτησης προϊόντων αίματος, προσφέροντας ενεργούς και υγιείς αιμοδότες για τις επόμενες δεκαετίες ισοσταθμίζοντας το πρόβλημα της γήρανσης του πληθυσμού. Κάτι το οποίο είναι υψίστης σημασίας δεδομένου ότι τα στατιστικά δείχνουν ότι δεν έχουμε καταφέρει να ευαισθητοποιήσουμε τους νέους έτσι ώστε να γίνουν τακτικοί εθελοντές αιμοδότες \cite{Marantidou2007}, γεγονός που δεν περιορίζεται εντός των ελληνικών συνόρων \cite{Lemmens2005}. Επιπροσθέτως εκμεταλλευόμενοι την κοινωνική επιρροή και κοινωνική ψυχολογία σε συνδυασμό με τα κοινωνικά δίκτυα της σύγχρονης εποχής, οι υπάρχοντες αιμοδότες μπορούν να αποτελέσουν πρότυπο και να χρησιμοποιηθούν ως εργαλείο στρατολόγησης νέων αιμοδοτών \cite{Misje2005}. Για αυτό θεωρούμε ότι είναι υψίστης σημασίας η διασύνδεση του συστήματος μας με τα μέσα κοινωνικής δικτύωσης δίνοντας ένα γενικότερο κοινωνικό τόνο σε όλη την διαδικασία της εθελοντικής αιμοδοσίας.
-	\item \textbf{Διατήρηση και επιπλέον ενεργοποίηση των υπαρχόντων εθελοντών αιμοδοτών:} Δυστυχώς ένα συχνό φαινόμενο που εμφανίζεται στον χώρο της εθελοντικής αιμοδοσίας είναι να συναντάμε περιπτώσεις εθελοντών οι οποίοι πραγματοποιούν μόλις μία αιμοδοσία χωρίς να πραγματοποιούν επόμενες αιμοδοσίες και να μετατραπούν σε τακτικούς ενεργούς αιμοδότες που τόσο χρειαζόμαστε. Αν και ο πιο συχνός λόγος που αναφέρεται από τους εθελοντές για τη μη δωρεά αίματος αποτελούν τα προβλήματα υγείας άλλοι σημαντικοί λόγοι αποτελούν οι περιορισμοί χρόνου καθώς και οι έλλειψη τακτικών υπενθυμίσεων και επιπλέον κινήτρων \cite{Marantidou2007}. Οπότε κατά τον σχεδιασμό και την υλοποίηση του συστήματος δώσαμε ιδιαίτερη έμφαση στην δημιουργία κατάλληλων μηχανισμών υπενθύμισης, έτσι ώστε να μπορούμε να κινητοποιήσουμε "επιλέξιμους" εθελοντές οι οποίοι επιθυμούν να πραγματοποιήσουν δωρεά αίματος και απλά θέλουν κάποια υπενθύμιση. Προς αυτή την κατεύθυνση μέσω του συστήματος γίνεται χρήση προσωποποιημένων ειδοποιήσεων προς έξυπνα κινητά (mobile push notifications) σε κατάλληλα χρονικά διαστήματα. Επιπλέον χρησιμοποιώντας κατάλληλο σύστημα gamification μπορούμε να προσφέρουμε επιπλέον κίνητρα ενεργοποιώντας σε μεγαλύτερο βαθμό τους εθελοντές \cite{TheGameOfLife}. Χρησιμοποιώντας τις παραπάνω λειτουργικότητες είμαστε αισιόδοξοι πως το προτεινόμενο σύστημα είναι σε θέση να αξιοποίηση στο μέγιστο βαθμό τους υπάρχοντες εθελοντές και να μετατρέψει τους περιστασιακούς σε τακτικούς αιμοδότες. Τέλος θα πρέπει να αναφερθεί ότι σε περίπτωση ανάγκης αξιοποιώντας τα παραπάνω μπορεί να πραγματοποιηθεί άμεση και επιτυχημένη έκκληση των εθελοντών αιμοδοτών για να καλύψουν την ανάγκη.
-	\item \textbf{Διευκόλυνση της διαχείρισης της εθελοντικής αιμοδοσίας:} Το σύστημα που αναλύουμε παρέχει την δυνατότητα στον εθελοντή αιμοδότη να κλείσει εύκολα και άμεσα ραντεβού για αιμοδοσία σε κάποιο κοντινό κέντρο αιμοδοσίας είτε μέσω της εφαρμογής έξυπνου κινητού είτε μέσω της διαδικτυακής εφαρμογής.
-	\item \textbf{Αύξηση ασφάλειας, αξιοπιστίας και μείωση κόστους:} Λαμβάνοντας υπόψιν πληροφορίες από το υποσύστημα επικοινωνίας με τον ηλεκτρονικό φάκελο ασθενούς καθώς και από το σύστημα ηλεκτρονικής συνταγογράφησης, επιτελούμε έναν πρωταρχικό έλεγχο εκλεξιμότητας του εθελοντή αιμοδότη. Σε αυτό το σημείο κρίνεται σκόπιμο να αναφερθεί ότι το εν λόγω υποσύστημα λειτουργεί ως σύστημα υποστήριξης απόφασης (Decision support system) και τον τελικό λόγο για την απόρριψη ή μη του εθελοντή την έχει ο γιατρός. Για κάθε εθελοντή που απορρίπτεται χωρίς να χρειαστεί να περάσει από το στάδιο αιματολογικών εξετάσεων εξοικονομείται χρόνος και χρήμα.
+	\item \textbf{Στρατολόγηση περισσότερων νέων εθελοντών:} Το σύστημα που προτείνουμε στην παρούσα διπλωματική εργασίας και κυρίως η εφαρμογή κινητού που το συνοδεύει πρόκειται να βοηθήσει σε πολύ μεγάλο βαθμό στην εξεύρεση περισσότερων εθελοντών αιμοδοτών και ειδικότερα άτομα νεαρότερης ηλικίας τα οποία χρησιμοποιούν κατά κόρων τα προϊόντα της νέας τεχνολογίας. Η προσθήκη ατόμων της νέας γενιάς στις τάξεις των εθελοντών αιμοδοτών μπορεί να κλείσει την όλο και αυξανόμενη ψαλίδα μεταξύ προσφοράς και ζήτησης προϊόντων αίματος, προσφέροντας ενεργούς και υγιείς αιμοδότες για τις επόμενες δεκαετίες ισοσταθμίζοντας το πρόβλημα της γήρανσης του πληθυσμού. Το γεγονός αυτό είναι υψίστης σημασίας, δεδομένου ότι τα στατιστικά δείχνουν ότι μέχρι τώρα δεν έχει επιτευχθεί η ευαισθητοποίηση των νέων έτσι ώστε να γίνουν τακτικοί εθελοντές αιμοδότες \cite{Marantidou2007}, όχι μόνο στην ελληνική πραγματικότητα αλλά και εκτός των ελληνικών συνόρων \cite{Lemmens2005}. Επιπροσθέτως εκμεταλλευόμενοι την κοινωνική επιρροή και κοινωνική ψυχολογία σε συνδυασμό με τα κοινωνικά δίκτυα της σύγχρονης εποχής, οι υπάρχοντες αιμοδότες μπορούν να αποτελέσουν πρότυπο και να χρησιμοποιηθούν ως εργαλείο στρατολόγησης νέων αιμοδοτών \cite{Misje2005}. Για αυτό θεωρούμε ότι είναι υψίστης σημασίας η διασύνδεση του συστήματος μας με τα μέσα κοινωνικής δικτύωσης δίνοντας ένα γενικότερο κοινωνικό τόνο σε όλη την διαδικασία της εθελοντικής αιμοδοσίας.
+	\item \textbf{Διατήρηση και επιπλέον ενεργοποίηση των υπαρχόντων εθελοντών αιμοδοτών:} Δυστυχώς ένα συχνό φαινόμενο που εμφανίζεται στον χώρο της εθελοντικής αιμοδοσίας είναι να συναντάμε περιπτώσεις εθελοντών οι οποίοι πραγματοποιούν μόλις μία αιμοδοσία χωρίς να πραγματοποιούν επόμενες αιμοδοσίες και να μετατραπούν στους τακτικούς ενεργούς αιμοδότες που τόσο χρειαζόμαστε. Αν και ο πιο συχνός λόγος που αναφέρεται από τους εθελοντές για τη μη δωρεά αίματος αποτελούν τα προβλήματα υγείας άλλοι σημαντικοί λόγοι αποτελούν οι περιορισμοί χρόνου καθώς και η έλλειψη τακτικών υπενθυμίσεων και επιπλέον κινήτρων \cite{Marantidou2007}. Οπότε, κατά τον σχεδιασμό και την υλοποίηση του συστήματος δώσαμε ιδιαίτερη έμφαση στη δημιουργία κατάλληλων μηχανισμών υπενθύμισης, έτσι ώστε να μπορούμε να κινητοποιήσουμε "επιλέξιμους" εθελοντές οι οποίοι επιθυμούν να πραγματοποιήσουν δωρεά αίματος και απλά θέλουν κάποια υπενθύμιση. Προς αυτή την κατεύθυνση, μέσω του συστήματος γίνεται χρήση προσωποποιημένων ειδοποιήσεων προς έξυπνα κινητά (mobile push notifications) σε κατάλληλα χρονικά διαστήματα. Επιπλέον χρησιμοποιώντας κατάλληλο σύστημα gamification μπορούμε να προσφέρουμε επιπλέον κίνητρα ενεργοποιώντας σε μεγαλύτερο βαθμό τους εθελοντές \cite{TheGameOfLife}. Χρησιμοποιώντας τις παραπάνω λειτουργικότητες είμαστε αισιόδοξοι πως το προτεινόμενο σύστημα είναι σε θέση να αξιοποιήσει στο μέγιστο βαθμό τους υπάρχοντες εθελοντές και να μετατρέψει τους περιστασιακούς σε τακτικούς αιμοδότες. Τέλος θα πρέπει να αναφερθεί ότι σε περίπτωση ανάγκης αξιοποιώντας τα παραπάνω μπορεί να πραγματοποιηθεί άμεση και επιτυχημένη έκκληση των εθελοντών αιμοδοτών για να καλύψουν την ανάγκη.
+	\item \textbf{Διευκόλυνση της διαχείρισης της εθελοντικής αιμοδοσίας:} Το σύστημα που αναλύουμε παρέχει τη δυνατότητα στον εθελοντή αιμοδότη να κλείσει εύκολα και άμεσα ραντεβού για αιμοδοσία σε κάποιο κοντινό κέντρο αιμοδοσίας είτε μέσω της εφαρμογής έξυπνου κινητού είτε μέσω της διαδικτυακής εφαρμογής.
+	\item \textbf{Αύξηση ασφάλειας, αξιοπιστίας και μείωση κόστους:} Λαμβάνοντας υπόψιν πληροφορίες από το υποσύστημα επικοινωνίας με τον ηλεκτρονικό φάκελο ασθενούς καθώς και από το σύστημα ηλεκτρονικής συνταγογράφησης, επιτελούμε έναν πρωταρχικό έλεγχο καταλληλότητας του εθελοντή αιμοδότη. Σε αυτό το σημείο κρίνεται σκόπιμο να αναφερθεί ότι το εν λόγω υποσύστημα λειτουργεί ως σύστημα υποστήριξης απόφασης (Decision support system) και τον τελικό λόγο για την απόρριψη ή μη του εθελοντή την έχει ο γιατρός. Για κάθε εθελοντή που απορρίπτεται χωρίς να χρειαστεί να περάσει από το στάδιο αιματολογικών εξετάσεων εξοικονομείται χρόνος και χρήμα.
 \end{itemize}
-Στην συνέχεια της παρούσας διπλωματικής εργασίας αναλύονται με λεπτομέρεια οι παραπάνω στόχοι καθώς και οι τρόποι που προσπαθούμε να τους πετύχουμε.
+Στη συνέχεια της παρούσας διπλωματικής εργασίας αναλύονται με λεπτομέρεια οι παραπάνω στόχοι καθώς και οι τρόποι που προσπαθούμε να τους πετύχουμε.
 \section{Οργάνωση κειμένου}
-H διπλωματική χωρίζεται σε 7 επιμέρους κεφάλαια. Στο κεφάλαιο 1 της διπλωματικής παρουσιάζεται το αντικείμενο και οι στόχοι που θέλει να πετύχει η παρούσα διπλωματική στο πεδίο των Ιατρικών Πληροφοριακών Συστημάτων. Στο κεφάλαιο 2 αναφέρονται γενικές πληροφορίες και στατιστικά για την εθελοντική αιμοδοσία στην Ελλάδα αλλά και στον υπόλοιπο κόσμο, όπου και γίνεται εμφανής η ανάγκη για μια βιώσιμη λύση. Στο τέλος του κεφαλαίου 2 γίνεται μια εισαγωγή στην αιμοεπαγρύπνηση και στην ελληνική μέριμνα σε αυτόν τον τομέα. Στο Κεφάλαιο 3 παρουσιάζεται λεπτομερώς η ανάλυση και η σχεδίαση του προτεινόμενου συστήματος αιμοδοσίας, που αποτελεί και το βασικό αντικείμενο της παρούσας διπλωματικής εργασίας. Στο κεφάλαιο 4 αναλύονται διεξοδικά οι διάφορες τεχνολογίες που χρησιμοποιήθηκαν τόσο στο Back-End όσο και στο Front-End των διάφορων υποσυστημάτων της εφαρμογής. Στο Κεφάλαιο 5 παρουσιάζεται λεπτομερώς η υλοποίηση του συστήματος αιμοδοσίας καθώς και μέθοδοι τεκμηρίωσης και αξιολόγησής τους. Στο κεφάλαιο 6 γίνεται αναφορά σε θέματα διασυνδεσιμότητας με τρίτα συστήματα και ανταλλαγής πληροφοριών με το σύστημα ηλεκτρονικής συνταγογράφησης και τον ηλεκτρονικό φάκελο ασθενούς και στην δημιουργία ενός clinical decision support system με μορφή υπηρεσίας στο υπολογιστικό νέφος. Επίσης παρουσιάζονται αναλυτικά πρωτόκολλα επικοινωνίας και μετάδοσης ευαίσθητων ιατρικών δεδομένων (HL7, CDA). Στο κεφάλαιο 7 γίνεται η σύνοψη της παρούσας διπλωματικής και παρουσιάζονται ιδέες και προτάσεις για την μελλοντική επέκταση της με επιπλέον υποσυστήματα και λειτουργικότητες.
+H διπλωματική χωρίζεται σε 7 επιμέρους κεφάλαια. Στο κεφάλαιο 1 της διπλωματικής παρουσιάζεται το αντικείμενο και οι στόχοι που θέλει να πετύχει η παρούσα διπλωματική στο πεδίο των Ιατρικών Πληροφοριακών Συστημάτων. Στο κεφάλαιο 2 αναφέρονται γενικές πληροφορίες και στατιστικά για την εθελοντική αιμοδοσία στην Ελλάδα αλλά και στον υπόλοιπο κόσμο, όπου και γίνεται εμφανής η ανάγκη για μια βιώσιμη λύση. Στο τέλος του κεφαλαίου 2 γίνεται μια εισαγωγή στην αιμοεπαγρύπνηση και στην ελληνική μέριμνα σε αυτόν τον τομέα. Στο Κεφάλαιο 3 παρουσιάζεται λεπτομερώς η ανάλυση και η σχεδίαση του προτεινόμενου συστήματος αιμοδοσίας, που αποτελεί και το βασικό αντικείμενο της παρούσας διπλωματικής εργασίας. Στο κεφάλαιο 4 αναλύονται διεξοδικά οι διάφορες τεχνολογίες που χρησιμοποιήθηκαν τόσο στο Back-End όσο και στο Front-End των διάφορων υποσυστημάτων της εφαρμογής. Στο Κεφάλαιο 5 παρουσιάζεται λεπτομερώς η υλοποίηση του συστήματος αιμοδοσίας καθώς και μέθοδοι τεκμηρίωσης και αξιολόγησής τους. Στο κεφάλαιο 6 γίνεται αναφορά σε θέματα διασυνδεσιμότητας με τρίτα συστήματα και ανταλλαγής πληροφοριών με το σύστημα ηλεκτρονικής συνταγογράφησης και τον ηλεκτρονικό φάκελο ασθενούς και στην δημιουργία ενός clinical decision support system με μορφή υπηρεσίας στο υπολογιστικό νέφος. Επίσης παρουσιάζονται αναλυτικά πρωτόκολλα επικοινωνίας και μετάδοσης ευαίσθητων ιατρικών δεδομένων (HL7, CDA). Στο κεφάλαιο 7 γίνεται η σύνοψη της παρούσας διπλωματικής και παρουσιάζονται ιδέες και προτάσεις για τη μελλοντική επέκταση της με επιπλέον υποσυστήματα και λειτουργικότητες.
