--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,14 +1,14 @@
 \chapter{Επίλογος}\label{ch:conclusion}
 
-		Στο πλαίσιο της παρούσας εργασίας μελετήσαμε, σχεδιάσαμε και υλοποιήσαμε ένα ολοκληρωμένο σύστημα διαχείρισης αιμοδοσιών. Αφού εντοπίστηκαν τα κύρια τεχνολογικά ζητήματα εφαρμογής του συστήματος, προτείναμε τις τεχνολογικές προσεγγίσεις για την αντιμετώπιση τους. Το σύστημα μας σχεδιάστηκε με σκοπό την προσέλκυση, την αύξηση και την διατήρηση του απαραίτητου αριθμού ενεργών εθελοντών, ώστε να καλύπτονται οι ανάγκες της χώρας. Αρκετή βαρύτητα δόθηκε στην αρχιτεκτονική πρόταση υλοποίησης του ενιαίου συστήματος και ακόμα περισσότερο στην αρχιτεκτονική και την σχεδίαση της εφαρμογής, η οποία εκμεταλλεύεται τις σύγχρονες τεχνολογίες cloud. Επιπλέον, σχεδιάσαμε το σύστημα διαχείρισης των αιμοδοσιών από την πλευρά των κέντρων αιμοδοσίας, με κριτήρια την αξιοπιστία, την ευχρηστία και την αποτελεσματικότητα. Παρουσιάστηκε ένα ενδεικτικό σχήμα της βάσης δεδομένων, η οποία είναι σχεδιασμένη ώστε εξυπηρετεί το πλήρες σύστημα και να είναι εύκολα επεκτάσιμη.
+		Στο πλαίσιο της παρούσας εργασίας μελετήσαμε, σχεδιάσαμε και υλοποιήσαμε ένα ολοκληρωμένο σύστημα διαχείρισης αιμοδοσιών. Αφού εντοπίστηκαν τα κύρια τεχνολογικά ζητήματα εφαρμογής του συστήματος, προτείναμε τις τεχνολογικές προσεγγίσεις για την αντιμετώπιση τους. Το σύστημα μας σχεδιάστηκε με σκοπό την προσέλκυση, την αύξηση και τη διατήρηση του απαραίτητου αριθμού ενεργών εθελοντών, ώστε να καλύπτονται οι ανάγκες της χώρας. Αρκετή βαρύτητα δόθηκε στην αρχιτεκτονική πρόταση υλοποίησης του ενιαίου συστήματος και ακόμα περισσότερο στην αρχιτεκτονική και στη σχεδίαση της εφαρμογής, η οποία εκμεταλλεύεται τις σύγχρονες τεχνολογίες cloud. Επιπλέον, σχεδιάσαμε το σύστημα διαχείρισης των αιμοδοσιών από την πλευρά των κέντρων αιμοδοσίας, με κριτήρια την αξιοπιστία, την ευχρηστία και την αποτελεσματικότητα. Παρουσιάστηκε ένα ενδεικτικό σχήμα της βάσης δεδομένων, η οποία είναι σχεδιασμένη ώστε εξυπηρετεί το πλήρες σύστημα και να είναι εύκολα επεκτάσιμη.
 		
-		Μελετήσαμε τα ζητήματα διαλειτουργικότητας και ασφαλούς επικοινωνίας με τρίτα συστήματα και προτάθηκαν μηχανισμοί χρήσης των πρωτοκόλλων αυτών και επίτευξης της επιθυμητής διαλειτουργικότητας. Τέλος, αναπτύξαμε ένα Clinical Decision Support System ως μία ανεξάρτητη Software as a Service υπηρεσία, η οποία είναι πολύτιμη για τις υπηρεσίες αιμοδοσίας και προλαμβάνει ανεπιθύμητα γεγονότα, βοηθώντας ουσιαστικά στην βελτιστοποίηση των υπηρεσιών αιμοδοσίας και στην πρόληψη  της μετατροπής των ενεργών αιμοδοτών σε ανενεργούς. Το σύστημα αυτό διασυνδέθηκε πλήρως με τα υπόλοιπο σύστημα αιμοδοσίας, και το δεύτερο ``ενσωμάτωσε" ουσιαστικά την υπηρεσία.
+		Μελετήσαμε τα ζητήματα διαλειτουργικότητας και ασφαλούς επικοινωνίας με τρίτα συστήματα και προτάθηκαν μηχανισμοί χρήσης των πρωτοκόλλων αυτών και επίτευξης της επιθυμητής διαλειτουργικότητας. Τέλος, αναπτύξαμε ένα Clinical Decision Support System ως μία ανεξάρτητη Software as a Service υπηρεσία, η οποία είναι πολύτιμη για τις υπηρεσίες αιμοδοσίας και προλαμβάνει ανεπιθύμητα γεγονότα, βοηθώντας ουσιαστικά στη βελτιστοποίηση των υπηρεσιών αιμοδοσίας και στην πρόληψη  της μετατροπής των ενεργών αιμοδοτών σε ανενεργούς. Το σύστημα αυτό διασυνδέθηκε πλήρως με τα υπόλοιπο σύστημα αιμοδοσίας, και το δεύτερο ``ενσωμάτωσε" ουσιαστικά την υπηρεσία.
 		
 \section{Μελλοντική δουλειά}
 	\subsection{Εφαρμογή έξυπνου ρολογιού - SmartWatch}
 	
 	
-		Τα τελευταία χρόνια τα ρολόγια έχουν εξελιχθεί και αυτά σε έξυπνα (Smartwatch). Η κύρια λειτουργία τους έχει εξελιχθεί και παραπέρα της απλής ενημέρωσης της ώρας. Ενώ τα πρώτα μοντέλα των έξυπνων ρολογιών εκτελούσαν βασικές λειτουργίες, όπως υπολογισμούς, μετατροπές και κάποιες φορές εκτέλεση παιχνιδιών, τα πιο πρόσφατα έξυπνα ρολόγια είναι σε γενικές γραμμές υπολογιστές που φοριούνται. Δίνεται η δυνατότητα σύνδεσής τους με κάποιο smartphone, tablet ή phablet μέσω Bluetooth. Με τον τρόπο αυτό μπορούν να εμφανίσουν εισερχόμενες κλήσεις, να προκαλέσουν εξερχόμενες κλήσεις, για αυτό και μερικά έξυπνα ρολόγια χαρακτηρίζονται και ως “watchphones ή ρολόγια-τηλέφωνα”, και να παρέχουν στην άλλη συσκευή πληροφορίες από τους αισθητήρες τους. Μπορούν, επίσης, όπως όλοι οι υπολογιστές, να διαθέτουν κάμερα, θερμόμετρο, πυξίδα, οθόνη αφής, πλοήγηση μέσω GPS, ακουστικά, κάρτες SD.	
+		Τα τελευταία χρόνια τα ρολόγια έχουν εξελιχθεί και αυτά σε έξυπνα (Smartwatch). Η κύρια λειτουργία τους έχει επεκταθεί παραπέρα της απλής ενημέρωσης σχετικά με την ώρα και την ημερομηνία. Ενώ τα πρώτα μοντέλα των έξυπνων ρολογιών εκτελούσαν βασικές λειτουργίες, όπως υπολογισμούς, μετατροπές και κάποιες φορές εκτέλεση παιχνιδιών, τα πιο πρόσφατα έξυπνα ρολόγια είναι σε γενικές γραμμές υπολογιστές που φοριούνται. Δίνεται η δυνατότητα σύνδεσής τους με κάποιο smartphone, tablet ή phablet μέσω Bluetooth. Με τον τρόπο αυτό μπορούν να εμφανίσουν εισερχόμενες κλήσεις, να προκαλέσουν εξερχόμενες κλήσεις, για αυτό και μερικά έξυπνα ρολόγια χαρακτηρίζονται και ως “watchphones ή ρολόγια-τηλέφωνα”, και να παρέχουν στην άλλη συσκευή πληροφορίες από τους αισθητήρες τους. Μπορούν, επίσης, όπως όλοι οι υπολογιστές, να διαθέτουν κάμερα, θερμόμετρο, πυξίδα, οθόνη αφής, πλοήγηση μέσω GPS, ακουστικά, κάρτες SD.	
 	
 	
 	Μια μελλοντική επέκταση του συστήματος αποτελεί η δημιουργία εφαρμογής για Smartwatches. Στην εφαρμογή αυτή, θα περιλαμβάνονται οι τρεις πιο βασικές λειτουργικότητες: λήψη ειδοποιήσεων (push notifications) για γεγονότα αιμοδοσίας και διαχείριση τους, δηλαδή αποδοχή, απόρριψη ή αναβολή, το κλείσιμο ραντεβού για αιμοδοσία καθώς και οι υπενθυμίσεις. Ένα από τα πολύ σημαντικά πλεονεκτήματα των smartwatch, το οποίο θέλουμε να εκμεταλλευτούμε είναι η δυνατότητα άμεσης ενημέρωσης για σημαντικά γεγονότα, οποιαδήποτε χρονική στιγμή και σε όποια τοποθεσία βρισκόμαστε χωρίς να είναι απαραίτητη η συνεχής ενασχόληση και χρήση του κινητού τηλεφώνου. Ως εκ τούτου, ειδοποιήσεις που συγκαταλέγονται σε αυτές με αυξημένη βαρύτητα μπορούν να σταλθούν στο smartwatch για άμεση επαφή με τον χρήστη.
@@ -18,8 +18,8 @@
 	
 	\subsection{Υποσύστημα πρόβλεψης αιμοδοσιών}
 		
-		Στις μελλοντικές επεκτάσεις περιλαμβάνεται  μετά την έναρξη της πιλοτικής εφαρμογής του συστήματος, πέραν από τα οφέλη που έχουμε προαναφέρει στην παρούσα διπλωματική, να πραγματοποιηθεί συλλογή δεδομένων. Τα δεδομένα αυτά θα περάσουν αρχικά από διαδικασία ανωνυμοποίησης (anonymization) και στη συνέχεια θα τα επεξεργαστούμε με σκοπό να βγάλουμε τις παράγωγες μεταβλητές που μας ενδιαφέρουν και μπορούν να βοηθήσουν στην μελέτη μας. Θα γίνει πλήρη ανάλυση των δεδομένων. Θα γίνει εξέταση των δεδομένων, με σκοπό να βρεθούν χαρακτηριστικά τα οποία πιθανόν να έχουν αξία στην πρόβλεψη των μελλοντικών αιμοδοσιών ενός εθελοντή.
+		Στις μελλοντικές επεκτάσεις περιλαμβάνεται  μετά την έναρξη της πιλοτικής εφαρμογής του συστήματος να πραγματοποιηθεί συλλογή δεδομένων σχετικά με τους εθελοντές αιμοδότες. Τα δεδομένα αυτά θα περάσουν αρχικά από διαδικασία ανωνυμοποίησης (anonymization) και στη συνέχεια θα ακολουθήσει επεξεργασία τους με σκοπό να βγάλουμε τις παράγωγες μεταβλητές που μας ενδιαφέρουν και μπορούν να βοηθήσουν στην μελέτη μας. Θα γίνει πλήρη ανάλυση των δεδομένων και εξέταση τους, με σκοπό να βρεθούν χαρακτηριστικά τα οποία πιθανόν να έχουν αξία στην πρόβλεψη των μελλοντικών αιμοδοσιών ενός εθελοντή.
 		
 	Προηγούμενες μελέτες έχουν δείξει ότι οι διάφορες πτυχές του ιστορικού των δωρεών του κάθε δότη συμβάλλουν στην ερμηνεία της μετέπειτα συμπεριφοράς του (επιστροφή για αιμοδοσία ή όχι). Σύμφωνα με τα δεδομένα των James και Matthews το ποσοστό της επιστροφής των δοτών αυξάνεται γραμμικά σε σχέση με τον αριθμό των  προηγούμενων αιμοδοσιών του εθελοντή \cite{number_d}. 
 		
-		Πολλές από τις παραγόμενες μεταβλητές που έχουμε σκοπό να εξάγουμε συσχετίζονται εγγενώς. Αυτό είναι αποδεκτό σε ένα μοντέλο σχεδιασμένο για προβλέψεις, εφ 'όσον τέτοιες συσχετίσεις υπάρχουν στον ίδιο βαθμό στο σύνολο των δεδομένων που χρησιμοποιούνται για την εκτίμηση όσο και το σύνολο των δεδομένων που χρησιμοποιούνται για την πρόβλεψη. Θα πρέπει, ωστόσο, να υπάρξει ιδιαίτερη προσοχή στην ερμηνεία της σχετικής σημασίας των μεταβλητών που θα χρησιμοποιηθούν και θα συσχετιστούν, καθώς αν μια μεταβλητή παραλειφθεί από το μοντέλο, η σημασία των συσχετισμένων μεταβλητών θα αυξηθεί. Στόχος μας είναι, να γίνει πρόβλεψη του μελλοντικού όγκου αιμοδοσιών καθώς και αναγνώριση μοτίβων και τάσεων αιμοδοσίας με στατιστικά μοντέλα.
+		Πολλές από τις παραγόμενες μεταβλητές που έχουμε σκοπό να εξάγουμε συσχετίζονται εγγενώς. Αυτό είναι αποδεκτό σε ένα μοντέλο σχεδιασμένο για προβλέψεις, εφόσον τέτοιες συσχετίσεις υπάρχουν στον ίδιο βαθμό στο σύνολο των δεδομένων που χρησιμοποιούνται για την εκτίμηση όσο και στο σύνολο των δεδομένων που χρησιμοποιούνται για την πρόβλεψη. Θα πρέπει, ωστόσο, να υπάρξει ιδιαίτερη προσοχή στην ερμηνεία της σχετικής σημασίας των μεταβλητών που θα χρησιμοποιηθούν και θα συσχετιστούν, καθώς αν μια μεταβλητή παραλειφθεί από το μοντέλο, η σημασία των συσχετισμένων μεταβλητών θα αυξηθεί. Στόχος μας είναι, να γίνει πρόβλεψη του μελλοντικού όγκου αιμοδοσιών καθώς και αναγνώριση μοτίβων και τάσεων αιμοδοσίας με στατιστικά μοντέλα.
